Resolvendo problema na edição e exclusão de categorias.
